--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username= ${DB_USR}
 spring.datasource.password= ${DB_PASSWORD}
 
+spring.jpa.properties.hibernate.default_schema= ${DB_SCHEMA}
+
 spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=SELECT 1
 
